--- a/[05] 소스코드/frontend/src/assets/scss/custom/_variables.scss
+++ b/[05] 소스코드/frontend/src/assets/scss/custom/_variables.scss
@@ -68,7 +68,7 @@ $colors: map-merge((
 ), $colors);
 
 $default:       #172b4d !default;
-$primary:       #1428A0  !default;
+$primary:       #00c03f  !default;
 $secondary:     #f4f5f7 !default;
 $success:       $green !default;
 $info:          $teal !default;
