--- a/[05] 소스코드/frontend/src/assets/scss/component/title-bar.scss
+++ b/[05] 소스코드/frontend/src/assets/scss/component/title-bar.scss
@@ -1,10 +1,16 @@
 //colors
 
 #titlebar {
-	position: relative;
+	width: 100%;
+	margin-top: -80px;
+
+	position:absolute;
+    left:0;
+	right:0;
+	
 	padding: 70px 0;
 	padding: 8rem 0;
-	background: url(/static/images/title-bar.jpg);
+	background: url(/static/title-bar.jpg);
 	background-size: cover;
 	background-position: center center;
    pointer-events: none;
